--- a/hardhat-fundme-client/index.html
+++ b/hardhat-fundme-client/index.html
@@ -5,6 +5,7 @@
   </head>
 
   <body>
+    <h1>Fund Me App</h1>
     <button id="connectButton">Connect</button>
     <button id="balanceButton">getBalance</button>
     <button id="withdrawButton">Withdraw</button>
